# ege

./: .gitmodules  CMakeLists.txt  README.md
include/ege/core/: main_layer.hpp
include/ege/ecs/: project_config.hpp  project_manger.hpp  system.hpp
include/ege/ecs/systems/: inspector_system.hpp  project_explorer_system.hpp  project_selector_system.hpp  project_system.hpp
include/ege/events/: app_events.hpp  event.hpp  key_events.hpp  mouse_events.hpp
res/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main_layer.cpp  project_explorer_system.cpp  project_manager.cpp  project_selector_system.cpp  project_system.cpp  system.cpp
